--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 				{% for post in site.posts %}
 				<li>
 					<figure>
-						<img src="{{ site.url }}/img/thumb/{{ post.photo }}" alt="img" />
+						<img src="{{ site.url }}/img/vertical/{{ post.photo }}" alt="img" />
 						<figcaption>
 							<h3>{{ post.caption_header}}</h3>
 							<p>{{ post.caption }}</p>
@@ -49,7 +49,7 @@ layout: default
 				{% for post in site.posts %}
 				<li>
 					<figure>
-						<img src="{{ site.url }}/img/large/{{ post.photo }}" alt="img" />
+						<img src="{{ site.url }}/img/horizontal/{{ post.photo }}" alt="img" />
 						<figcaption>
 							<a href="{{ post.url }}">
 								<h4>More Info</h4>
