--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: default
 					<figure>
 						<img src="{{ site.url }}/img/horizontal/{{ post.photo }}" alt="img" />
 						<figcaption>
-							<a href="{{ post.url }}">
+							<a href="{{ site.url }}/{{ post.url }}">
 								<h4>More Info</h4>
 							</a>
 						</figcaption>
